--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name":"riverline/multipart-parser",
-  "description":"One class library to parse multipart content with encoding and charset support.",
-  "keywords":["http","multipart","parser"],
+  "name":"frdl/mime-stub",
+  "description":"This script can be used to generate -self-executing- .php Files. ",
+  "keywords":["self-executing","multipart","parser", "stub"],
   "type":"library",
-  "license":"MIT",
+  "license":  [ "MIT", "BSD-4-Clause", "BSD-3-Clause", "1.3.6.1.4.1.37553.8.1.8.4.5" ],
   "authors":[
     {
       "name":"Romain Cambien",
@@ -12,17 +12,41 @@
     {
       "name":"Riverline",
       "homepage":"http://www.riverline.fr"
+    },
+    {
+      "name":"Till Wehowski",
+      "homepage":"http://webfan.de"
     }
   ],
   "require":{
     "php":           ">=5.3"
   },
   "require-dev":{
-    "phpunit/phpunit": "^4.7 || ^5.2"
+
   },
+  
+    "suggest": {
+
+    },
+
+    "conflict": {
+      
+    },    
+    
+    "provide" : {
+        "riverline/multipart-parser": "*"
+    },
+    
+  
   "autoload":{
     "psr-0":{
       "Riverline\\MultiPartParser": "src/"
-    }
+    },
+    
+    "psr-4": {
+            "webfan\\Mime": "src/webfan/Mime/"   
+     },
+       
+     "classmap": ["src/webfan/MimeStub.php", "src/webfan/Mime/vm.php", "src/webfan/MimeStubAPC.php"]
   }
 }
