--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
   
   "autoload":{
     "psr-0":{
-      "Riverline\\MultiPartParser": "src/"
+      "Riverline\\MultiPartParser\\": "src/"
     },
     
     "psr-4": {
-            "webfan\\Mime": "src/webfan/Mime/"   
+            "webfan\\Mime\\": "src/webfan/Mime/"   
      },
        
      "classmap": ["src/webfan/MimeStub.php", "src/webfan/Mime/vm.php", "src/webfan/MimeStubAPC.php"]
