--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description":"This script can be used to generate -self-executing- .php Files. ",
   "keywords":["self-executing","multipart","parser", "stub"],
   "type":"library",
-  "license":  [ "MIT", "BSD-4-Clause", "BSD-3-Clause", "1.3.6.1.4.1.37553.8.1.8.4.5" ],
+  "license":  "MIT",
   "authors":[
     {
       "name":"Romain Cambien",
